--- a/default.project.json
+++ b/default.project.json
@@ -10,6 +10,9 @@
       
       "Packages":{
         "$path": "Packages"
+      },
+      "Test":{
+        "$path": "Test"
       }
     },
     "ServerStorage":{
