--- a/wally.toml
+++ b/wally.toml
@@ -5,6 +5,8 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Knit = "sleitnick/knit@1.4.0"
-Signal = "sleitnick/signal@1.0.1"
+Knit = "sleitnick/knit@1.4.2"
+Signal = "sleitnick/signal@1.1.0"
 TableUtil = "sleitnick/table-util@1.1.1"
+Janitor = "howmanysmall/janitor@1.13.15"
+shake = "sleitnick/shake@0.1.2"
